# 21sh

./: .gitignore  CMakeLists.txt  a.out  algo.py  ast.dot  calc2.py  calc4.py  grammar_rule.md  notes.md  parsetree.dot  rnp.py  test.c
algo/: .token.py.swp  define.py  lexer.func.py  lexer.py  main.py  myToken.py  parser.py  token.py  toto.c
leaning_python/: cours_1.md
notes/: README.md  grammar.md  grammar_rule.md  link.md  notes.md  pipe.md  todo.md  token.md
src/: simple_asc.c
src/env_lib/: env_lib.add_variable.c  env_lib.delete_variable.c  env_lib.load_env.c  env_lib.utils.c
tuto/: calc1.py  lisp.py  note.md
tuto/part_9/: .spi.py.swp  spi.py  test_interpreter.py
